--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,29 @@
 {
-    "name": "mac/design-pattern_php",
-    "description": "is the sesign pattern which I Learned recently now it's the time to apply my dreams in the real life ...",
-    "license": "MTI",
-    "authors": [
-        {
-            "name": "Oussama EL AMRANI",
-            "email": "oussama1elamrani@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": "^7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.4"
+  "name": "mac/design-pattern_php",
+  "description": "is the sesign pattern which I Learned recently now it's the time to apply my dreams in the real life ...",
+  "license": "MTI",
+  "authors": [
+    {
+      "name": "Oussama EL AMRANI",
+      "email": "oussama1elamrani@gmail.com"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "php": "^7.0",
+    "illuminate/support": "^6.5",
+    "ext-json": "^1.7"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.4"
+  }
 }
