--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "ext-json": "^1.7"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.4"
+    "phpunit/phpunit": "^8.4",
+    "fzaninotto/faker": "^1.9"
   }
 }
